--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <script type="text/javascript" autoconnect="false" src="https://backendishops.herokuapp.com/dependencies/sails.io.js"></script>
+  <script type="text/javascript" autoconnect="false" src="https://programacrm.herokuapp.com/dependencies/sails.io.js"></script>
   <app-root></app-root>
 </body>
 
